Attempting to fix home-page background-image not showing on iOS devices.

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -35,8 +35,8 @@ Creates a full width background image on an element.
 @mixin cover-background(
   $img-uri,
   $background-top: 'center',
-  $background-left: 'center',
-  $background-attachment: 'fixed'
+  $background-left: 'center'
+  // $background-attachment: 'fixed'
 ) {
   background: url($img-uri) no-repeat unquote($background-top) unquote($background-left) unquote($background-attachment);
   -webkit-background-size: cover;
